# role-craft

./: CLAUDE.md  IMPLEMENTATION.md  README.md  Tech-Stack.md  project-scope.md  skills-lock.json
server/: main.py  pyproject.toml
server/routers/: job.py  resume.py  score.py
