[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "pdfplumber>=0.11.10",
    "playwright>=1.60.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "uvicorn[standard]>=0.49.0",
]
